--- a/Semana1/Dia1/html5.html
+++ b/Semana1/Dia1/html5.html
@@ -7,4 +7,24 @@
 		<meta name="keywords" content="html5, codigo, aprendiendo, Perú">
 		<title>Hola mundo - CódiGO - Perú</title>
 	</head>
+	<body>
+		<header>
+			<h1>Título Principal</h1>
+			<h2>Mensaje</h2>
+			<!-- h1 .... h6 -->
+		</header>
+		<nav>
+			<h2>Menú Principal</h2>
+			Inicio | Nosotros | Fotos | Blog | contacto
+		</nav>
+		<main>
+			<h2>Nuevos Artículos</h2>
+			<article>
+				<h3>Vacunatón en Perú</h3>
+				<p>
+					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat, nemo reprehenderit.
+				</p>
+			</article>
+		</main>
+	</body>
 </html>
