--- a/Semana1/Dia1/html5.html
+++ b/Semana1/Dia1/html5.html
@@ -25,6 +25,26 @@
 					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat, nemo reprehenderit.
 				</p>
 			</article>
+			<article>
+				<h3>Daft punk se une otra vez!</h3>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quaerat facilis pariatur nisi aut nihil.
+				</p>
+			</article>
 		</main>
+		<aside>
+			<section>
+				<h2>Acerca del autor</h2>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit.
+				</p>
+			</section>
+			<section>
+				<h2>Publicidad</h2>
+				<p>
+					Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, ducimus!
+				</p>
+			</section>
+		</aside>
 	</body>
 </html>
