--- a/Semana1/Dia1/html5.html
+++ b/Semana1/Dia1/html5.html
@@ -53,7 +53,12 @@
 			</div>
 			<div>
 				<h3>Nosotros</h3>
-				<p>Somos Código</p>
+				<p>
+					Somos 
+					<span style="color:blue">
+						Código
+					</span>
+				</p>
 				<small>Powered by Tecsup</small>
 			</div>
 			<div>
