--- a/Semana1/Dia1/enlaces.html
+++ b/Semana1/Dia1/enlaces.html
@@ -12,6 +12,16 @@
 			<h2>Menú</h2>
 			<!-- anchor -->
 			<a href="html5.html">Ir a mi primera página</a>
+			<a href="./seccion/imagenes.html">
+				Mis Fotos
+			</a>
+			<a href="https://google.com">
+				Ir a Google
+			</a>
+			<!-- con target="_blank me lleva a otra pestaña" -->
+			<a href="https://github.com" target="_blank">
+				Ir a github
+			</a>
 		</nav>
 	</body>
 </html>
