--- a/Semana1/Dia1/seccion/imagenes.html
+++ b/Semana1/Dia1/seccion/imagenes.html
@@ -2,11 +2,17 @@
 <html lang="es">
 	<head>
 		<meta charset="UTF-8">
-		<title>Imagenes</title>
+		<title>Imágenes</title>
 	</head>
 	<body>
 		<header>
 			<h1>Fotitos</h1>
 		</header>
+		<main>
+			<section>
+				<h2>Pingüinito</h2>
+				<img src="./pinguino.jpg" alt="foto de pinguino">
+			</section>
+		</main>
 	</body>
 </html>
