--- a/Semana2/Dia1/01-form.html
+++ b/Semana2/Dia1/01-form.html
@@ -26,6 +26,28 @@
 					placeholder="Ej. Perez Santos"
 					id="apellidos"
 				>
+				<br>
+				<label for="correo">email:</label>
+				<input
+					type="email"
+					placeholder="usuario@dominio.com"
+					id="correo"
+				>
+				<br>
+				<label for="password">Contraseña:</label>
+				<input
+					type="password"
+					placeholder="6 carácteres mínimo"
+					id="password"
+				>
+				<br>
+				<label for="edad">Edad</label>
+				<input
+					type="number"
+					placeholder="Ej. 18"
+					id="edad"
+				>
+				
 			</form>
 		</section>
 	</main>
