--- a/Semana2/Dia1/01-form.html
+++ b/Semana2/Dia1/01-form.html
@@ -47,7 +47,24 @@
 					placeholder="Ej. 18"
 					id="edad"
 				>
-				
+				<br>
+				<label>Género</label>
+				<br>
+				<input 
+					type="radio" 
+					name="genero"
+					value="M"
+				>Masculino
+				<input 
+					type="radio" 
+					name="genero"
+					value="F"
+				>Femenino
+				<input 
+					type="radio" 
+					name="genero"
+					value="NC"
+				>Prefiero no compartirlo
 			</form>
 		</section>
 	</main>
