--- a/Semana2/Dia1/01-form.html
+++ b/Semana2/Dia1/01-form.html
@@ -65,6 +65,19 @@
 					name="genero"
 					value="NC"
 				>Prefiero no compartirlo
+				<br>
+				<label>Intereses</label>
+				<br>
+				<input type="checkbox" value="next">
+				Next.js
+				<input type="checkbox" value="cocina">
+				Cocina para desarrolladores
+				<input type="checkbox" value="juegos">
+				Videojuegos
+				<input type="checkbox" value="juegosmesa">
+				Juegos de Mesa
+				<input type="checkbox" value="música">
+				Música
 			</form>
 		</section>
 	</main>
