--- a/Semana2/Dia1/01-form.html
+++ b/Semana2/Dia1/01-form.html
@@ -78,6 +78,38 @@
 				Juegos de Mesa
 				<input type="checkbox" value="música">
 				Música
+				<br>
+				<label>Ciudad:</label>
+				<select>
+					<option selected disabled>
+						Seleccione una opción
+					</option>
+					<option value="AM">Amazonas</option>
+					<option value="AN">Ancash</option>
+					<option value="AP">Apurimac</option>
+					<option value="AR">Arequipa</option>
+					<option value="CU">Cusco</option>
+					<option value="LI">Lima</option>
+					<option value="LI">Piura</option>
+					<option value="TA">Tacna</option>
+				</select>
+				<br>
+				<label>Distritos</label>
+				<input list="distritos">
+				<datalist id="distritos">
+					<option value="Lima">Lima Cercado</option>
+					<option value="Ate">Ate</option>
+					<option value="Breña">Breña</option>
+					<option value="Pueblo Libre">
+						Pueblo Libre
+					</option>
+					<option value="San Miguel">
+						San Miguel
+					</option>
+					<option value="San Juan de Lurigancho">
+						San Juan de Lurigancho
+					</option>
+				</datalist>
 			</form>
 		</section>
 	</main>
