--- a/Semana2/Dia1/01-form.html
+++ b/Semana2/Dia1/01-form.html
@@ -110,6 +110,18 @@
 						San Juan de Lurigancho
 					</option>
 				</datalist>
+				<br>
+				<label>Color</label>
+				<input type="color">
+				<br>
+				<label>Fecha de Nacimiento</label>
+				<input type="date">
+				<br>
+				<label>Hora</label>
+				<input type="time">
+				<br>
+				<label>Biografía</label>
+				<textarea cols="20" rows="5"></textarea>
 			</form>
 		</section>
 	</main>
