--- a/Semana2/Dia1/01-form.html
+++ b/Semana2/Dia1/01-form.html
@@ -122,7 +122,10 @@
 				<br>
 				<label>Biografía</label>
 				<textarea cols="20" rows="5"></textarea>
-			</form>
+				<br>
+				<input type="submit" value="Enviar">
+				<input type="reset" value="Limpiar">
+				<button>Click</button>
 		</section>
 	</main>
 </body>
