--- a/Semana2/Dia1/01-form.html
+++ b/Semana2/Dia1/01-form.html
@@ -29,6 +29,7 @@
 					placeholder="Ej. Perez Santos"
 					id="apellidos"
 					required
+					pattern="[a-z]{1,}"
 				>
 				<br>
 				<label for="correo">email:</label>
