--- a/Semana2/Dia1/02-tablas.html
+++ b/Semana2/Dia1/02-tablas.html
@@ -15,6 +15,7 @@
 						<th>Nombres</th>
 						<th>Apellidos</th>
 						<th>Ciudad</th>
+						<th>Hobbies</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -22,16 +23,18 @@
 						<td>Juan Carlos</td>
 						<td>Morales</td>
 						<td>Lima</td>
+						<td rowspan="2">Dotear</td>
 					</tr>
 					<tr>
 						<td>Arturo</td>
 						<td>Chaparro</td>
-						<td>Trujillo</td>
+						<td rowspan="2">Trujillo</td>
+						<!-- <td>Dotear</td> -->
 					</tr>
 					<tr>
 						<td>Walter</td>
 						<td>Lopez</td>
-						<td>Cusco</td>
+						<td>Futbol</td>
 					</tr>
 				</tbody>
 			</table>
