--- a/Semana2/Dia1/02-tablas.html
+++ b/Semana2/Dia1/02-tablas.html
@@ -37,7 +37,61 @@
 						<td>Futbol</td>
 					</tr>
 				</tbody>
+				<tfoot>
+					<tr>
+						<td colspan="4">Alumnos de codigo</td>
+					</tr>
+				</tfoot>
 			</table>
+			<br>
+
+			<table border="1">
+				<tr>
+				  <td rowspan="3">DAY</td>
+				  <td colspan="3">SEMINAR</td>
+				</tr>
+				<tr>
+				  <td colspan="2">SCHEDULE</td>
+				  <td rowspan="2">TOPIC</td>
+				</tr>
+				<tr>
+				  <td>BEGIN</td>
+				  <td>END</td>
+				</tr>
+				<tr>
+				  <td rowspan="2">Monday</td>
+				  <td rowspan="2">8:00 am</td>
+				  <td rowspan="2">5:00 am</td>
+				  <td>Introduction to xml</td>
+				</tr>
+				<tr>
+				  <td>Validaty: DTD and Relax NG</td>
+				</tr>
+				<tr>
+				  <td rowspan="5">Tuesday</td>
+				  <td rowspan="2">8:00 am</td>
+				  <td rowspan="2">11:00 am</td>
+				  <td rowspan="3">XPath</td>
+				</tr>
+				<tr></tr>
+				<tr>
+				  <td rowspan="2">11:00 am</td>
+				  <td rowspan="2">2:00 pm</td>
+				</tr>
+				<tr>
+				  <td rowspan="2">XSL transformations</td>
+				</tr>
+				<tr>
+				  <td>2:00 pm</td>
+				  <td>5:00 pm</td>
+				</tr>
+				<tr>
+				  <td>Wensday</td>
+				  <td>8:00 am</td>
+				  <td>12:00 pm</td>
+				  <td>XSL Formatting Objects</td>
+				</tr>
+			  </table>
 		</section>
 	</main>
 </body>
