--- a/Semana2/Dia2/02-css.html
+++ b/Semana2/Dia2/02-css.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 	<header>
-		<h1 style="color:blue; background:lightcoral;">
+		<h1 style="color:blue; background:lightcoral;" class="titulo1">
 			Estilos CSS
 		</h1>
 	</header>
