--- a/Semana2/Dia2/02-css.html
+++ b/Semana2/Dia2/02-css.html
@@ -40,6 +40,35 @@
 		<section class="rojo">
 			<h2 class="sub">Contacto</h2>
 			<p>Lorem ipsum dolor sit amet.</p>
+			<!-- unordered list -->
+			<ul>
+				<li>pescado</li>
+				<li>cebolla</li>
+				<li>limón</li>
+				<li>apio</li>
+				<li>culantro</li>
+				<li>kion</li>
+				<li>camote</li>
+				<li>maíz</li>
+				<li>sal</li>
+				<li>Ají limo</li>
+				<li>chifles</li>
+			</ul>
+			<!-- ordered list -->
+			<ol>
+				<li>Interstellar</li>
+				<li>Dune</li>
+				<li>Star Wars</li>
+				<li>Hachiko</li>
+				<li>Top Gun</li>
+				<li>Titanic</li>
+				<li>2012</li>
+				<li>Marea Roja</li>
+				<li>Cuestion de Honor</li>
+				<li>El Francotirador</li>
+				<li>Guia del viajero intergalactico</li>
+				<li>Gran Torino</li>
+			</ol>
 		</section>
 	</footer>
 </body>
