--- a/Semana3/02-caja.html
+++ b/Semana3/02-caja.html
@@ -8,10 +8,12 @@
 	<style>
 		/* todos los elementos que no tengan ni padding ni margin */
 		*{
+			/* RESET */
 			padding:0;
 			margin:0;
 			/* el tamaño que indiquemos debe incluir el conteido, el padding y el borde */
 			box-sizing: border-box;
+			border:1px solid blue;
 		}
 
 		h1{
@@ -19,6 +21,20 @@
 			margin:5px;
 			border:2px solid red;
 			width:300px;
+		}
+		section:nth-of-type(1){
+			width:250px;
+			/* nunca utilicen inline block */
+			display:inline-block;
+		}
+		section:nth-of-type(2){
+			width:200px;
+			display:inline-block;
+		}
+		span{
+			display:inline;/*por defecto*/
+			/*se acomoda al contenido*/
+			width:200px;
 		}
 	</style>
 </head>
@@ -30,6 +46,7 @@
 	<main>
 		<section>
 			<h2>Título Sección 1</h2>
+			<p>Lorem ipsum dolor sit <span>amet</span> consectetur adipisicing.</p>
 		</section>
 		<section>
 			<h2>Título Sección 2</h2>
