--- a/Semana3/03-position.html
+++ b/Semana3/03-position.html
@@ -32,6 +32,25 @@
 			position:absolute;
 			top:40px;
 			left:50px;
+			z-index: 19;
+		}
+		.caja4{
+			/* fixed, me permite fijar un elemento según el navegador */
+			position: fixed;
+			bottom:60px;
+			right:30px;
+			background-color: aqua;
+		}
+		.caja1{
+			position:sticky;
+			top:0;
+			z-index:9;
+			background-color:purple;
+			color:white;
+		}
+		.caja3{
+			position:absolute;
+			z-index:29;
 		}
 	</style>
 </head>
