--- a/Semana3/proyectito/index.html
+++ b/Semana3/proyectito/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	
+
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;800&display=swap" rel="stylesheet">
@@ -28,7 +28,7 @@
 				</button>
 			</div>
 		</nav>
-		<section>
+		<section class="hero">
 			<h1>Find the Best Solution in Seconds</h1>
 			<h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos!</h5>
 			<div>
