--- a/Semana3/proyectito/index.html
+++ b/Semana3/proyectito/index.html
@@ -39,5 +39,30 @@
 			<img src="assets/screen.png" alt="screen">
 		</section>
 	</header>
+	<main>
+		<section class="caracteristicas">
+			<h2>FigmaLand was Build Specifically for You</h2>
+			<div class="tarjetas">
+				<div class="tarjeta">
+					<img src="assets/idea.png">
+					<h4>Management</h4>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum explicabo sed laborum nemo exercitationem perferendis maiores possimus id vitae eum!</p>
+					<a href="#">Learn more</a>
+				</div>
+				<div class="tarjeta">
+					<img src="assets/atom.png">
+					<h4>Management</h4>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum explicabo sed laborum nemo exercitationem perferendis maiores possimus id vitae eum!</p>
+					<a href="#">Learn more</a>
+				</div>
+				<div class="tarjeta">
+					<img src="assets/iconscreen.png">
+					<h4>Management</h4>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum explicabo sed laborum nemo exercitationem perferendis maiores possimus id vitae eum!</p>
+					<a href="#">Learn more</a>
+				</div>
+			</div>
+		</section>
+	</main>
 </body>
 </html>
