--- a/Semana4/Dia1/02-animaciones.html
+++ b/Semana4/Dia1/02-animaciones.html
@@ -5,13 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="01-transiciones.css">
+	<link rel="stylesheet" href="02-animaciones.css">
 </head>
 <body>
-	<div class="cuadrado">
-
-	</div>
-	<img src="https://www.peru.travel/Contenido/Destino/Imagen/pe/27/1.1/Principal/Plaza%20de%20Armas%20Arequipa.jpg" alt="foto" id="mifoto">
-
+	<img class="nave" src="https://thumbs.dreamstime.com/b/icono-de-la-nave-espacial-en-dise%C3%B1o-plano-ilustraci%C3%B3n-83387127.jpg"
+	alt="nave">
 </body>
 </html>
