--- a/Semana4/Dia1/04-grid.html
+++ b/Semana4/Dia1/04-grid.html
@@ -18,6 +18,10 @@
 		<div class="item">caja 7</div>
 		<div class="item">caja 8</div>
 		<div class="item">caja 9</div>
+		<div class="item">caja adicional</div>
+		<div class="item">caja adicional</div>
+		<div class="item">caja adicional</div>
+		<div class="item">caja adicional</div>
 	</div>
 </body>
 </html>
