--- a/Semana4/Dia2/pinterest/index.html
+++ b/Semana4/Dia2/pinterest/index.html
@@ -43,5 +43,22 @@
 			</a>
 		</div>
 	</header>
+	<main class="container">
+		
+		<div class="tile-container">
+			<!-- loseta -->
+			<div class="tile">
+				<img src="./img/tile1.jpg" alt="...">
+				<div class="overlay">
+					<img src="./img/share.png" alt="share">
+					<p>Save</p>
+				</div>
+				<div class="tile-bottom">
+					<p>Nombre imagen</p>
+					<img src="./img/dots.png" alt="menu">
+				</div>
+			</div>
+		</div>
+	</main>
 </body>
 </html>
