--- a/Semana4/Dia2/pinterest/index.html
+++ b/Semana4/Dia2/pinterest/index.html
@@ -51,7 +51,7 @@
 				<img src="./img/tile1.jpg" alt="...">
 				<div class="overlay">
 					<img src="./img/share.png" alt="share">
-					<p>Save</p>
+					<button>Save</button>
 				</div>
 				<div class="tile-bottom">
 					<p>Nombre imagen</p>
