--- a/Semana4/Dia2/pinterest/index.html
+++ b/Semana4/Dia2/pinterest/index.html
@@ -58,6 +58,78 @@
 					<img src="./img/dots.png" alt="menu">
 				</div>
 			</div>
+			<!-- loseta -->
+			<div class="tile">
+				<img src="./img/tile2.jpg" alt="...">
+				<div class="overlay">
+					<img src="./img/share.png" alt="share">
+					<button>Save</button>
+				</div>
+				<div class="tile-bottom">
+					<p>Nombre imagen</p>
+					<img src="./img/dots.png" alt="menu">
+				</div>
+			</div>
+			<!-- loseta -->
+			<div class="tile">
+				<img src="./img/tile3.jpg" alt="...">
+				<div class="overlay">
+					<img src="./img/share.png" alt="share">
+					<button>Save</button>
+				</div>
+				<div class="tile-bottom">
+					<p>Nombre imagen</p>
+					<img src="./img/dots.png" alt="menu">
+				</div>
+			</div>
+			<!-- loseta -->
+			<div class="tile">
+				<img src="./img/tile4.jpg" alt="...">
+				<div class="overlay">
+					<img src="./img/share.png" alt="share">
+					<button>Save</button>
+				</div>
+				<div class="tile-bottom">
+					<p>Nombre imagen</p>
+					<img src="./img/dots.png" alt="menu">
+				</div>
+			</div>
+			<!-- loseta -->
+			<div class="tile">
+				<img src="./img/tile6.jpg" alt="...">
+				<div class="overlay">
+					<img src="./img/share.png" alt="share">
+					<button>Save</button>
+				</div>
+				<div class="tile-bottom">
+					<p>Nombre imagen</p>
+					<img src="./img/dots.png" alt="menu">
+				</div>
+			</div>
+			<!-- loseta -->
+			<div class="tile">
+				<img src="./img/tile7.jpg" alt="...">
+				<div class="overlay">
+					<img src="./img/share.png" alt="share">
+					<button>Save</button>
+				</div>
+				<div class="tile-bottom">
+					<p>Nombre imagen</p>
+					<img src="./img/dots.png" alt="menu">
+				</div>
+			</div>
+			<!-- loseta -->
+			<div class="tile">
+				<img src="./img/tile8.jpg" alt="...">
+				<div class="overlay">
+					<img src="./img/share.png" alt="share">
+					<button>Save</button>
+				</div>
+				<div class="tile-bottom">
+					<p>Nombre imagen</p>
+					<img src="./img/dots.png" alt="menu">
+				</div>
+			</div>
 		</div>
 	</main>
 </body>
