--- a/Semana4/Dia2/pinterest/index.html
+++ b/Semana4/Dia2/pinterest/index.html
@@ -13,11 +13,13 @@
 			<img 
 				src="./img/Pinterest-logo.png"
 				alt="logo pinterest"
+				id="botoncito"
 			> 
 		</div>
 		<input
 			type="text"
 			placeholder="Buscar"
+			id="inputbuscar"
 		>
 		<div class="icons">
 			<a href="#">
