--- a/Semana4/Dia3/index.html
+++ b/Semana4/Dia3/index.html
@@ -10,6 +10,7 @@
 	
 	<!-- el html va antes, porque primero tienen que cargar los elementos del html para poder interactuar con ellos -->
 	<!-- pongamos el archivo js justo antes de cerrar el body -->
-	<script src="./01-javascript.js"></script>
+	<!-- <script src="./01-javascript.js"></script> -->
+	<script src="./02-aritmetica.js"></script>
 </body>
 </html>
