--- a/Semana5/Dia1/index.html
+++ b/Semana5/Dia1/index.html
@@ -10,6 +10,7 @@
 	
 
 
-	<script src="01-concatenacion.js"></script>
+	<!-- <script src="01-concatenacion.js"></script> -->
+	<script src="02-ejercicios1.js"></script>
 </body>
 </html>
