--- a/Semana5/Dia1/index.html
+++ b/Semana5/Dia1/index.html
@@ -11,6 +11,7 @@
 
 
 	<!-- <script src="01-concatenacion.js"></script> -->
-	<script src="02-ejercicios1.js"></script>
+	<!-- <script src="02-ejercicios1.js"></script> -->
+	<script src="03-funciones.js"></script>
 </body>
 </html>
