--- a/Semana5/Dia1/index.html
+++ b/Semana5/Dia1/index.html
@@ -13,6 +13,7 @@
 	<!-- <script src="01-concatenacion.js"></script> -->
 	<!-- <script src="02-ejercicios1.js"></script> -->
 	<!-- <script src="03-funciones.js"></script> -->
-	<script src="04-arreglos.js"></script>
+	<!-- <script src="04-arreglos.js"></script> -->
+	<script src="05-condicionales.js"></script>
 </body>
 </html>
