--- a/Semana5/Dia2/index.html
+++ b/Semana5/Dia2/index.html
@@ -12,6 +12,7 @@
 
 	<!-- <script src="01-switch.js"></script> -->
 	<!-- <script src="02-ternario.js"></script> -->
-	<script src="03-while.js"></script>
+	<!-- <script src="03-while.js"></script> -->
+	<script src="04-for.js"></script>
 </body>
 </html>
