--- a/Semana5/Dia2/index.html
+++ b/Semana5/Dia2/index.html
@@ -13,6 +13,7 @@
 	<!-- <script src="01-switch.js"></script> -->
 	<!-- <script src="02-ternario.js"></script> -->
 	<!-- <script src="03-while.js"></script> -->
-	<script src="04-for.js"></script>
+	<!-- <script src="04-for.js"></script> -->
+	<script src="05-breakycontinue.js"></script>
 </body>
 </html>
