--- a/Semana5/Dia3/index.html
+++ b/Semana5/Dia3/index.html
@@ -10,6 +10,7 @@
 	
 
 
-	<script src="01-objetosymetodos.js"></script>
+	<!-- <script src="01-objetosymetodos.js"></script> -->
+	<script src="02-ejercicio1.js"></script>
 </body>
 </html>
