--- a/Semana5/Dia3/index.html
+++ b/Semana5/Dia3/index.html
@@ -12,6 +12,7 @@
 
 	<!-- <script src="01-objetosymetodos.js"></script> -->
 	<!-- <script src="02-ejercicio1.js"></script> -->
-	<script src="03-ejercicio2.js"></script>
+	<!-- <script src="03-ejercicio2.js"></script> -->
+	<script src="04-objetosestandar.js"></script>
 </body>
 </html>
