--- a/Semana6/Dia1/index.html
+++ b/Semana6/Dia1/index.html
@@ -9,6 +9,7 @@
 <body>
 	
 
-	<script src="./01-objetosNaturales.js"></script>
+	<!-- <script src="./01-objetosNaturales.js"></script> -->
+	<script src="./02-metodosArrays.js"></script>
 </body>
 </html>
