--- a/Semana6/Dia1/03-objetosDOM.html
+++ b/Semana6/Dia1/03-objetosDOM.html
@@ -9,6 +9,15 @@
 <body>
 	<h1>Título</h1>
 
+	<div id="caja">
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, doloribus.
+	</div>
+
+	<ul>
+		<li class="lista_item">Item1</li>
+		<li class="lista_item">Item2</li>
+		<li class="lista_item">Item3</li>
+	</ul>
 
 	<script src="03-objetosDOM.js"></script>
 </body>
