--- a/Semana6/Dia1/03-objetosDOM.html
+++ b/Semana6/Dia1/03-objetosDOM.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	
 </head>
 <body>
 	<h1>Título</h1>
@@ -18,6 +19,18 @@
 		<li class="lista_item">Item2</li>
 		<li class="lista_item">Item3</li>
 	</ul>
+
+	<p id="texto">
+		Lorem ipsum dolor sit amet.
+	</p>
+
+	<div class="box">
+		Lorem, ipsum dolor.
+	</div>
+	<div class="box">
+		Lorem, ipsum dolor.
+	</div>
+
 
 	<script src="03-objetosDOM.js"></script>
 </body>
