--- a/Semana6/Dia1/03-objetosDOM.html
+++ b/Semana6/Dia1/03-objetosDOM.html
@@ -5,7 +5,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	
+	<style>
+		.resaltado{
+			background-color: yellow;
+			color:red;
+		}
+		.redondeado{
+			border-radius:10px;
+			box-shadow:2px 2px 2px black;
+		}
+	</style>
 </head>
 <body>
 	<h1>Título</h1>
@@ -32,7 +41,7 @@
 	</div>
 
 	<div id="contenido">
-		
+
 	</div>
 
 
