--- a/Semana6/Dia3/02-todo.html
+++ b/Semana6/Dia3/02-todo.html
@@ -14,6 +14,7 @@
 			name="tarea"
 		>
 		<input type="submit" value="agregar tarea">
+		<!-- <button id="miBoton">Agregar tarea</button> -->
 	</form>
 	<ul id="tareas">
 
