--- a/Semana7/Dia1/02-columnas.html
+++ b/Semana7/Dia1/02-columnas.html
@@ -48,6 +48,17 @@
 				Columna de 3
 			</div>
 		</div>
+		<h2>Columnas Responsivas con BreakPoints</h2>
+		<h3><code>col-xl-#</code></h3>
+		<h5>xl - las columnas colapsan si es menor a 1200px</h5>
+		<div class="row">
+			<div class="col-xl-6 oscuro">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. At, ducimus!
+			</div>
+			<div class="col-xl-6 claro">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. At, ducimus!
+			</div>
+		</div>
 	</main>
 
 
