--- a/Semana7/Dia1/02-columnas.html
+++ b/Semana7/Dia1/02-columnas.html
@@ -59,6 +59,31 @@
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. At, ducimus!
 			</div>
 		</div>
+		<hr>
+		<h3><code>col-lg-#</code></h3>
+		<h5>lg - las columnas colapsan si es menos de 992px</h5>
+		<div class="row">
+			<div class="col-lg-7 oscuro">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, placeat?
+			</div>
+			<div class="col-lg-3 claro">
+				Lorem ipsum dolor sit, amet consectetur adipisicing.
+			</div>
+		</div>
+		<hr>
+		<h3><code>col-md-#</code></h3>
+		<h5>md - las columnas colapsan si es menos de 768px</h5>
+		<div class="row">
+			<div class="col-md-7 oscuro">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, placeat?
+			</div>
+			<div class="col-md-3 claro">
+				Lorem ipsum dolor sit, amet consectetur adipisicing.
+			</div>
+			<div class="col-md-2 claro">
+				Lorem ipsum dolor sit, amet consectetur adipisicing.
+			</div>
+		</div>
 	</main>
 
 
