--- a/Semana7/Dia1/02-columnas.html
+++ b/Semana7/Dia1/02-columnas.html
@@ -84,6 +84,34 @@
 				Lorem ipsum dolor sit, amet consectetur adipisicing.
 			</div>
 		</div>
+		<hr>
+		<h3><code>col-sm-#</code></h3>
+		<h5>sm - las columnas colapsan si es menos de 576px</h5>
+		<div class="row">
+			<div class="col-sm-4 oscuro">
+				Lorem ipsum dolor sit.
+			</div>
+			<div class="col-sm-4 claro">
+				Lorem ipsum dolor sit.
+			</div>
+			<div class="col-sm-4 oscuro">
+				Lorem ipsum dolor sit.
+			</div>
+		</div>
+		<hr>
+		<h3>Combinar Breakpoints</h3>
+		<h5>Podemos combinar xl lg md sm, para que los elementos con la clase col ocupen diferentes espacios según el ancho</h5>
+		<div class="row">
+			<div class="col-xl-7 col-lg-6 col-md-12 col-sm-12 oscuro">
+				Noticia Importante!
+			</div>
+			<div class="col-xl-3 col-lg-4 col-md-6 col-sm-8 claro">
+				Noticia Buena!
+			</div>
+			<div class="col-xl-2 col-lg-2 col-md-6 col-sm-4 oscuro">
+				Publicidad!
+			</div>
+		</div>
 	</main>
 
 
