--- a/Semana7/Dia1/02-columnas.html
+++ b/Semana7/Dia1/02-columnas.html
@@ -101,7 +101,7 @@
 		<hr>
 		<h3>Combinar Breakpoints</h3>
 		<h5>Podemos combinar xl lg md sm, para que los elementos con la clase col ocupen diferentes espacios según el ancho</h5>
-		<div class="row">
+		<div class="row mb-4">
 			<div class="col-xl-7 col-lg-6 col-md-12 col-sm-12 oscuro">
 				Noticia Importante!
 			</div>
