--- a/Semana7/Dia1/03-componentes.html
+++ b/Semana7/Dia1/03-componentes.html
@@ -45,6 +45,10 @@
 				Botón anchoooooooo
 			</button>
 		</div>
+		<hr>
+		<a href="#" class="btn btn-primary" type="button">
+			Link
+		</a>
 	</main>
 
 
