--- a/Semana7/Dia1/04-tablas.html
+++ b/Semana7/Dia1/04-tablas.html
@@ -13,7 +13,7 @@
 		<div class="row">
 			<div class="col-12">
 				<table class="table table-striped">
-					<thead>
+					<thead class="table-dark">
 						<th>Cabecera 1</th>
 						<th>Cabecera 2</th>
 						<th>Cabecera 3</th>
