--- a/Semana7/Dia1/05-cards.html
+++ b/Semana7/Dia1/05-cards.html
@@ -11,7 +11,7 @@
 	<main class="container">
 		<div class="row">
 			<div class="col-lg-4 col-md-6 col-sm-12">
-				<div class="card">
+				<div class="card mb-4 shadow">
 					<img
 					class="card-img-top"
 					src="https://picsum.photos/400"
@@ -208,28 +208,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-4 col-md-6 col-sm-12">
-				<div class="card">
-					<img
-					class="card-img-top"
-					src="https://picsum.photos/400"
-					alt="imagen"	
-					>
-					<div class="card-body">
-						<h5 class="card-title">
-							Foto 1
-						</h5>
-						<p class="card-text">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, sequi.
-						</p>
-					</div>
-					<div class="card-footer d-grid">
-						<button class="btn btn-primary">
-							Visualizar
-						</button>
-					</div>
-				</div>
-			</div>
+			
 		</div>
 	</main>
 </body>
