--- a/Semana7/Dia2/01-navbar.html
+++ b/Semana7/Dia2/01-navbar.html
@@ -28,7 +28,19 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="links">
-
+				<!-- links -->
+				<ul class="navbar-nav">
+					<!-- .navbar-item, cada link del navbar -->
+					<li class="navbar-item">
+						Inicio
+					</li>
+					<li class="navbar-item">
+						Galería
+					</li>
+					<li class="navbar-item">
+						Contáctenos
+					</li>
+				</ul>
 			</div>
 		</div>
 	</nav>
