--- a/Semana7/Dia2/01-navbar.html
+++ b/Semana7/Dia2/01-navbar.html
@@ -31,13 +31,13 @@
 				<!-- links -->
 				<ul class="navbar-nav">
 					<!-- .navbar-item, cada link del navbar -->
-					<li class="navbar-item">
+					<li class="navbar-item me-2">
 						Inicio
 					</li>
-					<li class="navbar-item">
+					<li class="navbar-item me-2">
 						Galería
 					</li>
-					<li class="navbar-item">
+					<li class="navbar-item me-2">
 						Contáctenos
 					</li>
 				</ul>
