--- a/Semana7/Dia2/02-modal.html
+++ b/Semana7/Dia2/02-modal.html
@@ -10,8 +10,12 @@
 <body>
 	<div class="container-fluid">
 		<!-- contenido principal -->
+		<!--Bootstrap em sus componentes, utiliza un atributo personalizado data-bs-target para referenciar a un elemento que sirva como componente  -->
+		<!-- data-bs-toggle indicará el efecto a realizar -->
 		<button
 			class="btn btn-primary"
+			data-bs-target="#miModal"
+			data-bs-toggle="modal"
 		>
 			Abrir modal
 		</button>
@@ -29,6 +33,15 @@
 				</div>
 				<div class="modal-body">
 					<p>Confirmar por favor</p>
+				</div>
+				<div class="modal-footer">
+					<!-- data-bs-dismiss, cierra el modal -->
+					<button 
+						class="btn btn-danger"
+						data-bs-dismiss="modal"
+					>
+						Cerrar
+					</button>
 				</div>
 			</div>
 		</div>
