--- a/Semana7/Dia2/02-modal.html
+++ b/Semana7/Dia2/02-modal.html
@@ -19,6 +19,13 @@
 		>
 			Abrir modal
 		</button>
+
+		<button 
+			class="btn btn-success"
+			id="btnAbrir"
+		>
+			Abrir con JS
+		</button>
 	</div>
 
 
@@ -49,7 +56,7 @@
 
 	<!-- JavaScript Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
-	
+
 	<script src="./02-modal.js"></script>
 
 </body>
