--- a/Semana8/Dia1/index.html
+++ b/Semana8/Dia1/index.html
@@ -10,6 +10,7 @@
 	
 
 
-	<script src="01-letyconst.js"></script>
+	<!-- <script src="01-letyconst.js"></script> -->
+	<script src="02-class.js"></script>
 </body>
 </html>
