--- a/Semana8/Dia1/index.html
+++ b/Semana8/Dia1/index.html
@@ -11,6 +11,7 @@
 
 
 	<!-- <script src="01-letyconst.js"></script> -->
-	<script src="02-class.js"></script>
+	<!-- <script src="02-class.js"></script> -->
+	<script src="03-masclass.js"></script>
 </body>
 </html>
