--- a/Semana8/Dia2/index.html
+++ b/Semana8/Dia2/index.html
@@ -10,10 +10,6 @@
 	
 
 
-	<!-- <script src="01-letyconst.js"></script> -->
-	<!-- <script src="02-class.js"></script> -->
-	<!-- <script src="03-masclass.js"></script> -->
-	<!-- <script src="04-asincronia.js"></script> -->
-	<script src="05-callbacks.js"></script>
+	<script src="01-funcionesflecha.js"></script>
 </body>
 </html>
