--- a/Semana8/Dia2/index.html
+++ b/Semana8/Dia2/index.html
@@ -10,6 +10,7 @@
 	
 
 
-	<script src="01-funcionesflecha.js"></script>
+	<!-- <script src="01-funcionesflecha.js"></script> -->
+	<script src="02-promesas.js"></script>
 </body>
 </html>
