--- a/Semana8/Dia2/index.html
+++ b/Semana8/Dia2/index.html
@@ -11,6 +11,7 @@
 
 
 	<!-- <script src="01-funcionesflecha.js"></script> -->
-	<script src="02-promesas.js"></script>
+	<!-- <script src="02-promesas.js"></script> -->
+	<script src="03-encadenamientodepromesas.js"></script>
 </body>
 </html>
