--- a/Semana8/Dia2/index.html
+++ b/Semana8/Dia2/index.html
@@ -12,6 +12,7 @@
 
 	<!-- <script src="01-funcionesflecha.js"></script> -->
 	<!-- <script src="02-promesas.js"></script> -->
-	<script src="03-encadenamientodepromesas.js"></script>
+	<!-- <script src="03-encadenamientodepromesas.js"></script> -->
+	<script src="04-fetch.js"></script>
 </body>
 </html>
