--- a/Semana8/Dia3/index.html
+++ b/Semana8/Dia3/index.html
@@ -10,6 +10,7 @@
 	
 
 
-	<script src="01-asyncawait.js"></script>
+	<!-- <script src="01-asyncawait.js"></script> -->
+	<script src="02-desestructuracion.js"></script>
 </body>
 </html>
