--- a/Semana8/Dia3/index.html
+++ b/Semana8/Dia3/index.html
@@ -11,6 +11,7 @@
 
 
 	<!-- <script src="01-asyncawait.js"></script> -->
-	<script src="02-desestructuracion.js"></script>
+	<!-- <script src="02-desestructuracion.js"></script> -->
+	<script src="03-spreadoperator.js"></script>
 </body>
 </html>
