--- a/Semana8/Dia3/index.html
+++ b/Semana8/Dia3/index.html
@@ -12,6 +12,7 @@
 
 	<!-- <script src="01-asyncawait.js"></script> -->
 	<!-- <script src="02-desestructuracion.js"></script> -->
-	<script src="03-spreadoperator.js"></script>
+	<!-- <script src="03-spreadoperator.js"></script> -->
+	<script src="04-truthy-falsy.js"></script>
 </body>
 </html>
