--- a/Semana9/01-proyectovanilla/index.html
+++ b/Semana9/01-proyectovanilla/index.html
@@ -14,14 +14,25 @@
         />
     </head>
     <body>
-		
+        <nav class="navbar navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand">CodiGO Store</a>
+            </div>
+        </nav>
 
-		
+		<div class="container">
+			<h1 class="mt-4">Lista de Productos</h1>
+			<main class="row" id="productos"></main>
+		</div>
+
         <!-- JavaScript Bundle with Popper -->
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"
         ></script>
+        <!-- mi App.js -->
+        <!-- type="module" va a permitir importar otros archivos de JS desde App.js -->
+        <script src="App.js" type="module"></script>
     </body>
 </html>
