--- a/Semana9/01-proyectovanilla/index.html
+++ b/Semana9/01-proyectovanilla/index.html
@@ -33,6 +33,6 @@
         ></script>
         <!-- mi App.js -->
         <!-- type="module" va a permitir importar otros archivos de JS desde App.js -->
-        <script src="App.js" type="module"></script>
+        <script src="js/App.js" type="module" type="script"></script>
     </body>
 </html>
