--- a/Semana9/01-proyectovanilla/index.html
+++ b/Semana9/01-proyectovanilla/index.html
@@ -20,10 +20,29 @@
             </div>
         </nav>
 
-		<div class="container">
-			<h1 class="mt-4">Lista de Productos</h1>
-			<main class="row" id="productos"></main>
-		</div>
+        <div class="container">
+            <h1 class="mt-4">Lista de Productos</h1>
+            <button class="btn btn-primary btn-lg" id="btnCrear">Agregar Producto</button>
+            <main class="row" id="productos"></main>
+        </div>
+
+        <div class="modal" tabindex="-1" id="modalCrear">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Modal title</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Modal body text goes here.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- JavaScript Bundle with Popper -->
         <script
