--- a/Semana10/00-repaso/index.html
+++ b/Semana10/00-repaso/index.html
@@ -9,6 +9,7 @@
 <body>
 	
 
-	<script src="01-xhr.js"></script>
+	<!-- <script src="01-xhr.js"></script> -->
+	<script src="02-xhrpromesa.js"></script>
 </body>
 </html>
